--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/node": "^16.7.1",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "ts-migrate": "^0.1.21",
+    "typescript": "^3.9.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
